@@ -6534,3 +6534,6 @@ PACKAGE: 2.2.99.2
 2007-08-15 cjg
  * Fixed weird sort of error which didn't fail but should in xhtml_help.
  * Added support for <title> override in workflow.
+
+2007-08-22 tmb
+ * Fixed "action" parameter not being included in redirect_to_me_url
